--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "compile:icons": "fantasticon src/assets/icons -o src/assets/fonts/ -n Verity-Icons -h 200 --normalize 1 -t woff2"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.4.6",
+    "framer-motion": "^11.3.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
